# zeuxis

./: .gitignore  Cargo.toml  LICENSE  README.md  prek.toml
.devana/: 20260625T082533Z-P1-downscale-squashes-aspect-ratio.md  20260625T082534Z-P1-cursor-window-fallback-metadata.md  20260625T082535Z-P1-worker-timeout-budget-exhausted.md  20260625T082536Z-P1-artifact-dir-ignored-subprocess.md  20260625T082537Z-P2-session-cache-drain-orphans-files.md  20260625T082538Z-P2-terminate-worker-wait-io-error.md  20260625T082539Z-P2-delay-outside-timeout-budget.md  20260625T100000Z-P2-latest-capture-context-mismatch.md  20260625T100001Z-P2-worker-exit-status-clobbers-response.md  20260625T100002Z-P2-prune-deletes-concurrent-artifact.md
.github/workflows/: ci.yml  release-prepare.yml  release.yml
packaging/homebrew/: README.md
scripts/: build-release.ps1  build-release.sh  homebrew-update-sha256.sh  package-release.ps1  package-release.sh  resolve-version.sh  trigger-countdown-capture.sh
skills/capturing-ui-with-zeuxis/: SKILL.md
specs/mcp-screenshot-runtime-hardening/: design.md  requirements.md  tasks.md
specs/mcp-screenshot-server/: design.md  requirements.md  tasks.md
specs/mcp-subprocess-capture-hard-timeout/: design.md  requirements.md  tasks.md
src/: lib.rs  main.rs  runtime_config.rs
src/capture/: backend.rs  mod.rs  region.rs  xcap_backend.rs
src/cursor/: mod.rs
src/mcp/: errors.rs  mod.rs  result.rs  server.rs  tools.rs
src/platform/: mod.rs
tests/: linux_smoke.rs  main_binary.rs  mcp_tools_validation.rs  result_payload.rs  tool_calls.rs
(+8 files in other folders)
