[package]
name = "zeuxis"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "Local read-only MCP screenshot server for screen/window/region capture"
readme = "README.md"
homepage = "https://github.com/bnomei/zeuxis"
repository = "https://github.com/bnomei/zeuxis"
documentation = "https://docs.rs/zeuxis"
keywords = ["mcp", "screenshot", "agent", "automation", "desktop"]
categories = ["command-line-utilities", "multimedia::images"]
exclude = [".DS_Store", "specs/**"]

[dependencies]
rmcp = { version = "1.1.0", features = ["transport-io"] }
tokio = { version = "1.50.0", features = ["io-std", "macros", "rt", "sync", "time"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
schemars = "1.2.1"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
xcap = "0.8.3"
image = { version = "0.25.9", default-features = false, features = ["png"] }
device_query = "4.0.1"
tempfile = "3.26.0"
time = { version = "0.3.47", features = ["formatting"] }
url = "2.5.8"

[dev-dependencies]
tokio = { version = "1.50.0", features = ["macros", "rt"] }
